Charity List Page and Details page outlined. No tabs

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,8 +6,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding style="text-align: center">
+  <h1>Welcome to Charity App</h1>
   <button ion-button (click)="navigateToLogin()">Login</button>
   <br>
-  <button ion-button (click)="navigateToRegister()">Register now</button>
+  <button ion-button (click)="navigateToRegister()">Create an Account</button>
 </ion-content>
