--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,10 +12,10 @@
     </p>
     <ion-list>
       <ion-item>
-        <ion-input type="text" placeholder="Username"></ion-input>
+        <ion-input type="text" placeholder="Username" [(ngModel)] = "username"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input type="password" placeholder="Password"></ion-input>
+        <ion-input type="password" placeholder="Password" [(ngModel)] = "password"></ion-input>
       </ion-item>
     </ion-list>
     <div padding>
