--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,6 @@
 
 <ion-content padding style="text-align: center">
   <h1>Welcome to Charity App</h1>
-  <button ion-button (click)="navigateToLogin()">Login</button>
-  <br>
-  <button ion-button (click)="navigateToRegister()">Create an Account</button>
+  <button ion-button full (click)="navigateToLogin()">Login</button>
+  <button ion-button full (click)="navigateToRegister()">Create an Account</button>
 </ion-content>
