--- a/src/pages/registration/registration.html
+++ b/src/pages/registration/registration.html
@@ -1,15 +1,12 @@
 <ion-header>
     <ion-navbar>
       <ion-title>
-        Registration
+        Register Now
       </ion-title>
     </ion-navbar>
   </ion-header>
   
   <ion-content padding>
-    <p>
-      Register now
-    </p>
     <ion-list>
         <ion-item>
             <ion-label stacked>Name</ion-label>
