Provider, charity updating, registration, portfolio complete. Profile picture and log out functions incomplete.

--- a/src/pages/confirmation/confirmation.html
+++ b/src/pages/confirmation/confirmation.html
@@ -7,9 +7,12 @@
   </ion-header>
   
   <ion-content padding>
-    <p>
+    <h1>
         <b>Registration successful!</b>
-    </p>
+    </h1>
+    <h2>
+       Welcome {{name}}!
+    </h2>
     <button ion-button (click) = "navigateToProfile()">Go to Profile</button>
   </ion-content>
   
