--- a/src/pages/registration/registration.html
+++ b/src/pages/registration/registration.html
@@ -10,23 +10,23 @@
     <ion-list>
         <ion-item>
             <ion-label stacked>Name</ion-label>
-            <ion-input type="text"></ion-input>
+            <ion-input type="text" [(ngModel)] = "name"></ion-input>
         </ion-item>
         <ion-item>
             <ion-label stacked>Email</ion-label>
-            <ion-input type="email"></ion-input>
+            <ion-input type="email" [(ngModel)] = "email"></ion-input>
         </ion-item>
         <ion-item>
             <ion-label stacked>Username</ion-label>
-            <ion-input type="text"></ion-input>
+            <ion-input type="text" [(ngModel)] = "username"></ion-input>
         </ion-item>
         <ion-item>
             <ion-label stacked>Password</ion-label>
-            <ion-input type="password"></ion-input>
+            <ion-input type="password" [(ngModel)] = "password1"></ion-input>
         </ion-item>
         <ion-item>
             <ion-label stacked>Confirm password</ion-label>
-            <ion-input type="password"></ion-input>
+            <ion-input type="password" [(ngModel)] = "password2"></ion-input>
         </ion-item>
     </ion-list>
     <div padding>
