--- a/src/pages/confirmation/confirmation.html
+++ b/src/pages/confirmation/confirmation.html
@@ -10,6 +10,7 @@
     <h1>
         <b>Registration successful!</b>
     </h1>
+    <img src="http://clipartmag.com/images/check-mark-transparent-background-18.png">
     <h2>
        Welcome {{name}}!
     </h2>
