--- a/src/pages/registration/registration.html
+++ b/src/pages/registration/registration.html
@@ -9,8 +9,12 @@
   <ion-content padding>
     <ion-list>
         <ion-item>
-            <ion-label stacked>Name</ion-label>
-            <ion-input type="text" [(ngModel)] = "name"></ion-input>
+            <ion-label stacked>First Name</ion-label>
+            <ion-input type="text" [(ngModel)] = "firstname"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label stacked>Last Name</ion-label>
+            <ion-input type="text" [(ngModel)] = "lastname"></ion-input>
         </ion-item>
         <ion-item>
             <ion-label stacked>Email</ion-label>
