--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,8 @@
 
 <ion-content padding style="text-align: center">
   <h1>Welcome to Charity App</h1>
-  <h2>insert animation here</h2>
+  <lottie-animation-view [options]="lottieConfig" [width] = "200" [height] = "200">
+  </lottie-animation-view>
   <button ion-button full (click)="navigateToLogin()">Login</button>
   <button ion-button full (click)="navigateToRegister()">Create an Account</button>
 </ion-content>
